--- a/index.html
+++ b/index.html
@@ -20,15 +20,16 @@
                     <img src="img/hero.png" alt="">
                 </div>
             </div>
+            </div>
             <div class="right-header">
                 <h1 class="name">
-                    Hi, I'm <span>Solano Milan Diaz.</span>
-                    A Web Developer.
+                    Hi, I'm <span>Akshita.</span>
                 </h1>
                 <p>
-                    I'm a Web Developer, I love to create beautiful and functional websites.
-                    Lorem ipsum dolor sit amet consectetur adipisicing elit. Officia, libero?
-                    Lorem ipsum dolor sit amet consectetur adipisicing elit. Neque blanditiis sed aut!
+                    Welcome to my portfolio website! <br>
+                    I'm a final year undergraduate student passionate about software development. <br>
+                    Explore my projects and expertise in crafting innovative software solutions, designing captivating websites, and join me while I explore the world of cybersecurity. <br>
+                    Let's connect and explore possibilities together!
                 </p>
                 <div class="btn-con">
                     <a href="" class="main-btn">
