--- a/index.html
+++ b/index.html
@@ -47,15 +47,13 @@
             </div>
             <div class="about-container">
                 <div class="left-about">
-                    <h4>Information About me</h4>
+                    <h4>About me</h4>
                     <p>
-                        Lorem ipsum dolor sit amet consectetur adipisicing elit. 
-                        Eveniet labore nihil obcaecati consequatur. Debitis error doloremque, 
-                        vero eos vel nemo eius voluptatem dicta tenetur modi. <br /> <br /> La musica
-                        delectus dolore fugiat exercitationem a, 
-                        ipsum quidem quo enim natus accusamus labore dolores nam. Unde.
-                        Lorem ipsum dolor sit amet consectetur, adipisicing elit. 
-                        Harum non necessitatibus deleniti eum soluta.
+                        I am a final year student deeply fascinated by the realms of software development, web design, cybersecurity and the exciting field of artificial intelligence (AI) and machine learning (ML). <br>
+                        Equipped with expertise in HTML, CSS, JS and programming, I have also delved into the applications of AI/ML. <br>
+                        Through projects such as developing an AI Voice Assistant, building a credit card fraud detector system, I have explored the power of AI/ML to extract insights, enhance user experiences, and automate processes.<br> 
+                        I am eager to continue my journey, leveraging cutting-edge technologies to shape the future of software development and AI-driven solutions. <br>
+                        I have recently taken an interest in the field of Cybersecurity as well and hope to get more oportunities to upskill myself.<br>
                     </p>
                     <div class="btn-con">
                         <a href="#" class="main-btn">
