--- a/index.html
+++ b/index.html
@@ -20,7 +20,6 @@
                     <img src="img/hero.png" alt="">
                 </div>
             </div>
-            </div>
             <div class="right-header">
                 <h1 class="name">
                     Hi, I'm <span>Akshita.</span>
@@ -51,9 +50,9 @@
                     <p>
                         I am a final year student deeply fascinated by the realms of software development, web design, cybersecurity and the exciting field of artificial intelligence (AI) and machine learning (ML). <br>
                         Equipped with expertise in HTML, CSS, JS and programming, I have also delved into the applications of AI/ML. <br>
-                        Through projects such as developing an AI Voice Assistant, building a credit card fraud detector system, I have explored the power of AI/ML to extract insights, enhance user experiences, and automate processes.<br> 
-                        I am eager to continue my journey, leveraging cutting-edge technologies to shape the future of software development and AI-driven solutions. <br>
-                        I have recently taken an interest in the field of Cybersecurity as well and hope to get more oportunities to upskill myself.<br>
+                        Through projects such as developing an AI Voice Assistant, building a credit card fraud detector system, I have explored the power of AI/ML to extract insights, enhance user experiences, and automate processes. <br>
+                        I am eager to continue my journey, leveraging cutting-edge technologies to shape the future of software development and AI-driven solutions. 
+                        I have recently taken an interest in the field of Cybersecurity as well and hope to get more oportunities to upskill myself.
                     </p>
                     <div class="btn-con">
                         <a href="#" class="main-btn">
@@ -65,26 +64,22 @@
                 <div class="right-about">
                     <div class="about-item">
                         <div class="abt-text">
-                            <p class="large-text">650+</p>
-                            <p class="small-text">Projects <br /> Completed</p>
+                            <p class="small-text">Proficient in HTML, CSS and JavaScript</p>
                         </div>
                     </div>
                     <div class="about-item">
                         <div class="abt-text">
-                            <p class="large-text">10+</p>
-                            <p class="small-text">Years of <br /> experience</p>
+                            <p class="small-text">Detail-oriented for precise and polished work.</p>
                         </div>
                     </div>
                     <div class="about-item">
                         <div class="abt-text">
-                            <p class="large-text">300+</p>
-                            <p class="small-text">Happy <br /> Clients</p>
+                            <p class="small-text">Passionate about continuous learning and self-improvement.</p>
                         </div>
                     </div>
                     <div class="about-item">
                         <div class="abt-text">
-                            <p class="large-text">400+</p>
-                            <p class="small-text">Customer <br /> reviews</p>
+                            <p class="small-text">Excellent communication for effective collaboration.</p>
                         </div>
                     </div>
                 </div>
@@ -104,41 +99,41 @@
                     <div class="progress-bar">
                         <p class="prog-title">css3</p>
                         <div class="progress-con">
-                            <p class="prog-text">95%</p>
+                            <p class="prog-text">50%</p>
                             <div class="progress">
                                 <span class="css"></span>
                             </div>
                         </div>
                     </div>
                     <div class="progress-bar">
-                        <p class="prog-title">javascript</p>
+                        <p class="prog-title">JavaScript</p>
                         <div class="progress-con">
-                            <p class="prog-text">75%</p>
+                            <p class="prog-text">50%</p>
                             <div class="progress">
                                 <span class="js"></span>
                             </div>
                         </div>
                     </div>
                     <div class="progress-bar">
-                        <p class="prog-title">ReactJS</p>
+                        <p class="prog-title">Python</p>
                         <div class="progress-con">
-                            <p class="prog-text">75%</p>
+                            <p class="prog-text">80%</p>
                             <div class="progress">
                                 <span class="react"></span>
                             </div>
                         </div>
                     </div>
                     <div class="progress-bar">
-                        <p class="prog-title">NodeJS</p>
+                        <p class="prog-title">Java</p>
                         <div class="progress-con">
-                            <p class="prog-text">87%</p>
+                            <p class="prog-text">50%</p>
                             <div class="progress">
                                 <span class="node"></span>
                             </div>
                         </div>
                     </div>
                     <div class="progress-bar">
-                        <p class="prog-title">Python</p>
+                        <p class="prog-title">C Programming</p>
                         <div class="progress-con">
                             <p class="prog-text">70%</p>
                             <div class="progress">
