--- a/index.html
+++ b/index.html
@@ -149,60 +149,45 @@
                     <div class="tl-icon">
                         <i class="fas fa-briefcase"></i>
                     </div>
-                    <p class="tl-duration">2010 - present</p>
-                    <h5>Web Developer<span> - Vircrosoft</span></h5>
+                    <p class="tl-duration">June 2023 - Present</p>
+                    <h5>Web Developer<span> - Wipro GE Healthcare</span></h5>
                     <p>
-                        Lorem ipsum dolor sit amet consectetur adipisicing elit. Saepe quasi vero fugit.
+                        Operations, Management and Development Intern
                     </p>
                 </div>
                 <div class="timeline-item">
                     <div class="tl-icon">
                         <i class="fas fa-briefcase"></i>
                     </div>
-                    <p class="tl-duration">2008 - 2011</p>
-                    <h5>Software Engineer<span> - Boogle, Inc.</span></h5>
+                    <p class="tl-duration">May 2023 - Present</p>
+                    <h5>Web Developer<span> - Fabric Nest</span></h5>
                     <p>
-                        Lorem ipsum dolor sit amet consectetur adipisicing elit. Saepe quasi vero fugit.
+                        Incorporating responsive design principles to ensure seamless user experiences across various devices and screen sizes. <br>
+                        Writing clean and efficient code using HTML, CSS, JavaScript, and other relevant technologies.
                     </p>
                 </div>
                 <div class="timeline-item">
                     <div class="tl-icon">
                         <i class="fas fa-briefcase"></i>
                     </div>
-                    <p class="tl-duration">2016 - 2017</p>
-                    <h5>C++ Programmer<span> - Slime Tech</span></h5>
+                    <p class="tl-duration">August 2022 - May 2023</p>
+                    <h5>Web Developer<span> - SolarMobil, Manipal</span></h5>
                     <p>
-                        Lorem ipsum dolor sit amet consectetur adipisicing elit. Saepe quasi vero fugit.
+                        Web Developer. Trained and led a team of 4 web developers, driving their skill development and coordinating their efforts to successfully deliver projects on time and within budget.<br>
+                        Developed and maintained 2 responsive websites using HTML, CSS, JavaScript, and Tailwind CSS, ensuring optimal user experience and cross-browser compatibility.<br>
+                        Implemented effective UI/UX designs, optimizing website performance and usability. Conducted thorough testing and debugging to identify and resolve any issues, ensuring smooth functionality and user-friendly interfaces.<br> 
+                        Actively participated in weekly team meetings, offering suggestions and ideas to improve development processes and enhance overall project delivery.<br>
                     </p>
                 </div>
                 <div class="timeline-item">
                     <div class="tl-icon">
                         <i class="fas fa-briefcase"></i>
                     </div>
-                    <p class="tl-duration">2009 - 2013</p>
-                    <h5>Business Degree<span> - Sussex University</span></h5>
+                    <p class="tl-duration">2020 - 2024</p>
+                    <h5>Bachelors' Degree<span> - Manipal Institute of Technology, Manipal</span></h5>
                     <p>
-                        Lorem ipsum dolor sit amet consectetur adipisicing elit. Saepe quasi vero fugit.
-                    </p>
-                </div>
-                <div class="timeline-item">
-                    <div class="tl-icon">
-                        <i class="fas fa-briefcase"></i>
-                    </div>
-                    <p class="tl-duration">2013 - 2016</p>
-                    <h5>Computer Science Degree<span> - Brookes University</span></h5>
-                    <p>
-                        Lorem ipsum dolor sit amet consectetur adipisicing elit. Saepe quasi vero fugit.
-                    </p>
-                </div>
-                <div class="timeline-item">
-                    <div class="tl-icon">
-                        <i class="fas fa-briefcase"></i>
-                    </div>
-                    <p class="tl-duration">2017 - present</p>
-                    <h5>3d Animation<span> - Brighton University</span></h5>
-                    <p>
-                        Lorem ipsum dolor sit amet consectetur adipisicing elit. Saepe quasi vero fugit.
+                        B.Tech. in Electrical and Electronics Engineering.<br>
+                        Minor in Computing.
                     </p>
                 </div>
             </div>
