--- a/index.html
+++ b/index.html
@@ -152,7 +152,14 @@
                     <p class="tl-duration">June 2023 - Present</p>
                     <h5>Web Developer<span> - Wipro GE Healthcare</span></h5>
                     <p>
-                        Operations, Management and Development Intern
+                        Operations, Management and Development Intern<br>
+                        Responsibilities 
+                        1. To assist the Production Team leader and Process engineer. <br>
+                        2. To contribute to the ideation process and report to the Business Team Leader.<br>
+                        3. Observation on assembly processes and report to the assignee.<br>
+                        Projects
+                        1. Subsystems Production Line observation as well as documentation and identification of all the sub class parts used. <br>
+                        2. Streamlining the process of MD-SAP Audit as well acting as a mode of communicatoin between the auditor and the Manufacturing Engineers.<br> 
                     </p>
                 </div>
                 <div class="timeline-item">
